--- a/w11_mid21_74/server_74/package.json
+++ b/w11_mid21_74/server_74/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "server_xx",
+  "name": "server_74",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node server_xx",
-    "dev": "nodemon server_xx",
+    "start": "node server_74",
+    "dev": "nodemon server_74",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
